tests/baselines/reference/parseImportAttributesError.errors.txt
error TS2468: Cannot find global value 'Promise'.
/index.ts(2,7): error TS1340: Module 'pkg' does not refer to a type, but is used as a type here. Did you mean 'typeof import('pkg')'?
/index.ts(2,30): error TS1478: Identifier or string literal expected.
/index.ts(2,30): error TS2695: Left side of comma operator is unused and has no side effects.
/index.ts(2,53): error TS1005: ';' expected.
/index.ts(2,64): error TS1128: Declaration or statement expected.
/index.ts(2,66): error TS1128: Declaration or statement expected.
/index.ts(2,67): error TS1128: Declaration or statement expected.
/index.ts(2,68): error TS1128: Declaration or statement expected.
/index.ts(2,69): error TS2304: Cannot find name 'RequireInterface'.
/index.ts(3,7): error TS2712: A dynamic import call in ES5/ES3 requires the 'Promise' constructor.  Make sure you have a declaration for the 'Promise' constructor or include 'ES2015' in your '--lib' option.
/index.ts(3,34): error TS1005: ':' expected.
/index.ts(3,68): error TS2339: Property 'ImportInterface' does not exist on type 'Promise<{ default: typeof import("/node_modules/pkg/import"); }>'.
/index.ts(5,34): error TS1340: Module 'pkg' does not refer to a type, but is used as a type here. Did you mean 'typeof import('pkg')'?
/index.ts(5,57): error TS1478: Identifier or string literal expected.
/index.ts(5,57): error TS2695: Left side of comma operator is unused and has no side effects.
/index.ts(5,80): error TS1005: ';' expected.
/index.ts(5,91): error TS1128: Declaration or statement expected.
/index.ts(5,93): error TS1128: Declaration or statement expected.
/index.ts(5,94): error TS1128: Declaration or statement expected.
/index.ts(5,95): error TS1128: Declaration or statement expected.
/index.ts(5,96): error TS1434: Unexpected keyword or identifier.
/index.ts(5,96): error TS2304: Cannot find name 'RequireInterface'.
/index.ts(5,112): error TS1128: Declaration or statement expected.
/index.ts(6,34): error TS1340: Module 'pkg' does not refer to a type, but is used as a type here. Did you mean 'typeof import('pkg')'?
/index.ts(6,57): error TS1478: Identifier or string literal expected.
/index.ts(6,57): error TS2695: Left side of comma operator is unused and has no side effects.
/index.ts(6,80): error TS1005: ';' expected.
/index.ts(6,90): error TS1128: Declaration or statement expected.
/index.ts(6,92): error TS1128: Declaration or statement expected.
/index.ts(6,93): error TS1128: Declaration or statement expected.
/index.ts(6,94): error TS1128: Declaration or statement expected.
/index.ts(6,95): error TS1434: Unexpected keyword or identifier.
/index.ts(6,95): error TS2304: Cannot find name 'ImportInterface'.
/index.ts(6,110): error TS1128: Declaration or statement expected.


!!! error TS2468: Cannot find global value 'Promise'.
==== /index.ts (34 errors) ====
    export type LocalInterface =
        & import("pkg", { with: {1234, "resolution-mode": "require"} }).RequireInterface
          ~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS1340: Module 'pkg' does not refer to a type, but is used as a type here. Did you mean 'typeof import('pkg')'?
                                 ~~~~
!!! error TS1478: Identifier or string literal expected.
                                 ~~~~
!!! error TS2695: Left side of comma operator is unused and has no side effects.
                                                        ~
!!! error TS1005: ';' expected.
                                                                   ~
!!! error TS1128: Declaration or statement expected.
                                                                     ~
!!! error TS1128: Declaration or statement expected.
                                                                      ~
!!! error TS1128: Declaration or statement expected.
                                                                       ~
!!! error TS1128: Declaration or statement expected.
                                                                        ~~~~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'RequireInterface'.
        & import("pkg", { with: {1234, "resolution-mode": "import"} }).ImportInterface;
          ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2712: A dynamic import call in ES5/ES3 requires the 'Promise' constructor.  Make sure you have a declaration for the 'Promise' constructor or include 'ES2015' in your '--lib' option.
                                     ~
!!! error TS1005: ':' expected.
                                                                       ~~~~~~~~~~~~~~~
!!! error TS2339: Property 'ImportInterface' does not exist on type 'Promise<{ default: typeof import("/node_modules/pkg/import"); }>'.
    
    export const a = (null as any as import("pkg", { with: {1234, "resolution-mode": "require"} }).RequireInterface);
                                     ~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS1340: Module 'pkg' does not refer to a type, but is used as a type here. Did you mean 'typeof import('pkg')'?
                                                            ~~~~
!!! error TS1478: Identifier or string literal expected.
                                                            ~~~~
!!! error TS2695: Left side of comma operator is unused and has no side effects.
                                                                                   ~
!!! error TS1005: ';' expected.
                                                                                              ~
!!! error TS1128: Declaration or statement expected.
                                                                                                ~
!!! error TS1128: Declaration or statement expected.
                                                                                                 ~
!!! error TS1128: Declaration or statement expected.
                                                                                                  ~
!!! error TS1128: Declaration or statement expected.
                                                                                                   ~~~~~~~~~~~~~~~~
!!! error TS1434: Unexpected keyword or identifier.
                                                                                                   ~~~~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'RequireInterface'.
                                                                                                                   ~
!!! error TS1128: Declaration or statement expected.
    export const b = (null as any as import("pkg", { with: {1234, "resolution-mode": "import"} }).ImportInterface);
                                     ~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS1340: Module 'pkg' does not refer to a type, but is used as a type here. Did you mean 'typeof import('pkg')'?
                                                            ~~~~
!!! error TS1478: Identifier or string literal expected.
                                                            ~~~~
!!! error TS2695: Left side of comma operator is unused and has no side effects.
                                                                                   ~
!!! error TS1005: ';' expected.
                                                                                             ~
!!! error TS1128: Declaration or statement expected.
                                                                                               ~
!!! error TS1128: Declaration or statement expected.
                                                                                                ~
!!! error TS1128: Declaration or statement expected.
                                                                                                 ~
!!! error TS1128: Declaration or statement expected.
                                                                                                  ~~~~~~~~~~~~~~~
!!! error TS1434: Unexpected keyword or identifier.
                                                                                                  ~~~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'ImportInterface'.
                                                                                                                 ~
!!! error TS1128: Declaration or statement expected.
    
==== /node_modules/pkg/package.json (0 errors) ====
    {
        "name": "pkg",
        "version": "0.0.1",
        "exports": {
            "import": "./import.js",
            "require": "./require.js"
        }
    }
    
==== /node_modules/pkg/import.d.ts (0 errors) ====
    export interface ImportInterface {}
    
==== /node_modules/pkg/require.d.ts (0 errors) ====
    export interface RequireInterface {}
    